--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Xtrendence/X-LANDrop#readme",
   "dependencies": {
     "aes-js": "^3.1.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
     "ejs": "^3.0.1",
