--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "fs": "0.0.1-security",
     "ip": "^1.1.5",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.2",
     "path": "^0.12.7",
     "request": "^2.88.0",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
