--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aes-js": "^3.1.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chalk": "^3.0.0",
     "crypto": "^1.0.1",
     "ejs": "^3.0.1",
     "evilscan": "^1.7.5",
