--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "multer": "^1.4.2",
     "node-rsa": "^1.0.7",
     "path": "^0.12.7",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
